Backported entire library to Java7.