@@ -15,14 +15,18 @@
  */
 package org.everit.json.schema;
 
+import com.google.common.base.Function;
+import com.google.common.base.Optional;
+import com.google.common.base.Predicate;
+import com.google.common.collect.FluentIterable;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
 import org.everit.json.schema.internal.JSONPrinter;
 import org.json.JSONObject;
 
 import java.util.*;
 import java.util.Map.Entry;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.util.Objects.requireNonNull;
 
@@ -40,7 +44,7 @@ public class ObjectSchema extends Schema {
 
         private boolean requiresObject = true;
 
-        private final Map<String, Schema> propertySchemas = new HashMap<>();
+        private final Map<String, Schema> propertySchemas = new LinkedHashMap<>();
 
         private boolean additionalProperties = true;
 
@@ -117,7 +121,7 @@ public class ObjectSchema extends Schema {
         public Builder propertyDependency(final String ifPresent, final String mustBePresent) {
             Set<String> dependencies = propertyDependencies.get(ifPresent);
             if (dependencies == null) {
-                dependencies = new HashSet<String>(1);
+                dependencies = new LinkedHashSet<>(1);
                 propertyDependencies.put(ifPresent, dependencies);
             }
             dependencies.add(mustBePresent);
@@ -194,15 +198,18 @@ public class ObjectSchema extends Schema {
         this.patternProperties = copyMap(builder.patternProperties);
     }
 
-    private Stream<String> getAdditionalProperties(final JSONObject subject) {
+    private FluentIterable<String> getAdditionalProperties(final JSONObject subject) {
         String[] names = JSONObject.getNames(subject);
         if (names == null) {
-            return Stream.empty();
+            return FluentIterable.from(Lists.<String>newArrayList());
         } else {
-            return Arrays
-                    .stream(names)
-                    .filter(key -> !propertySchemas.containsKey(key))
-                    .filter(key -> !matchesAnyPattern(key));
+            return FluentIterable.of(names)
+                    .filter(new Predicate<String>() {
+                        @Override
+                        public boolean apply(String key) {
+                            return !propertySchemas.containsKey(key) && !matchesAnyPattern(key);
+                        }
+                    });
         }
     }
 
@@ -241,16 +248,20 @@ public class ObjectSchema extends Schema {
     private Optional<ValidationException> ifFails(final Schema schema, final Object input) {
         try {
             schema.validate(input);
-            return Optional.empty();
+            return Optional.absent();
         } catch (ValidationException e) {
             return Optional.of(e);
         }
     }
 
     private boolean matchesAnyPattern(final String key) {
-        return patternProperties.keySet().stream()
-                .filter(pattern -> pattern.matcher(key).find())
-                .findAny()
+        return FluentIterable.from(patternProperties.keySet())
+                .firstMatch(new Predicate<Pattern>() {
+                    @Override
+                    public boolean apply(Pattern pattern) {
+                        return pattern.matcher(key).find();
+                    }
+                })
                 .isPresent();
     }
 
@@ -262,25 +273,33 @@ public class ObjectSchema extends Schema {
         return requiresObject;
     }
 
-    private List<ValidationException> testAdditionalProperties(final JSONObject subject) {
+    private ImmutableList<ValidationException> testAdditionalProperties(final JSONObject subject) {
         if (!additionalProperties) {
             return getAdditionalProperties(subject)
-                    .map(unneeded -> String.format("extraneous key [%s] is not permitted", unneeded))
-                    .map(msg -> new ValidationException(this, msg, "additionalProperties"))
-                    .collect(Collectors.toList());
+                    .transform(new Function<String, ValidationException>() {
+                        @Override
+                        public ValidationException apply(String unneeded) {
+                            return new ValidationException(ObjectSchema.this,
+                                    String.format("extraneous key [%s] is not permitted", unneeded), "additionalProperties");
+                        }
+                    })
+                    .toList();
         } else if (schemaOfAdditionalProperties != null) {
-            List<String> additionalPropNames = getAdditionalProperties(subject)
-                    .collect(Collectors.toList());
+            List<String> additionalPropNames = getAdditionalProperties(subject).toList();
             List<ValidationException> rval = new ArrayList<ValidationException>();
-            for (String propName : additionalPropNames) {
+            for (final String propName : additionalPropNames) {
                 Object propVal = subject.get(propName);
-                ifFails(schemaOfAdditionalProperties, propVal)
-                        .map(failure -> failure.prepend(propName, this))
-                        .ifPresent(rval::add);
+                rval.addAll(ifFails(schemaOfAdditionalProperties, propVal)
+                        .transform(new Function<ValidationException, ValidationException>() {
+                            @Override
+                            public ValidationException apply(ValidationException failure) {
+                                return failure.prepend(propName, ObjectSchema.this);
+                            }
+                        }).asSet());
             }
-            return rval;
+            return ImmutableList.copyOf(rval);
         }
-        return Collections.emptyList();
+        return ImmutableList.of();
     }
 
     private List<ValidationException> testPatternProperties(final JSONObject subject) {
@@ -290,11 +309,16 @@ public class ObjectSchema extends Schema {
         }
         List<ValidationException> rval = new ArrayList<>();
         for (Entry<Pattern, Schema> entry : patternProperties.entrySet()) {
-            for (String propName : propNames) {
+            for (final String propName : propNames) {
                 if (entry.getKey().matcher(propName).find()) {
-                    ifFails(entry.getValue(), subject.get(propName))
-                            .map(exc -> exc.prepend(propName))
-                            .ifPresent(rval::add);
+                    rval.addAll(ifFails(entry.getValue(), subject.get(propName))
+                            .transform(new Function<ValidationException, ValidationException>() {
+                                @Override
+                                public ValidationException apply(ValidationException exc) {
+                                    return exc.prepend(propName);
+                                }
+                            })
+                            .asSet());
                 }
             }
         }
@@ -305,11 +329,16 @@ public class ObjectSchema extends Schema {
         if (propertySchemas != null) {
             List<ValidationException> rval = new ArrayList<>();
             for (Entry<String, Schema> entry : propertySchemas.entrySet()) {
-                String key = entry.getKey();
+                final String key = entry.getKey();
                 if (subject.has(key)) {
-                    ifFails(entry.getValue(), subject.get(key))
-                            .map(exc -> exc.prepend(key))
-                            .ifPresent(rval::add);
+                    rval.addAll(ifFails(entry.getValue(), subject.get(key))
+                            .transform(new Function<ValidationException, ValidationException>() {
+                                @Override
+                                public ValidationException apply(ValidationException exc) {
+                                    return exc.prepend(key);
+                                }
+                            })
+                            .asSet());
                 }
             }
             return rval;
@@ -317,22 +346,52 @@ public class ObjectSchema extends Schema {
         return Collections.emptyList();
     }
 
-    private List<ValidationException> testPropertyDependencies(final JSONObject subject) {
-        return propertyDependencies.keySet().stream()
-                .filter(subject::has)
-                .flatMap(ifPresent -> propertyDependencies.get(ifPresent).stream())
-                .filter(mustBePresent -> !subject.has(mustBePresent))
-                .map(missingKey -> String.format("property [%s] is required", missingKey))
-                .map(excMessage -> new ValidationException(this, excMessage, "dependencies"))
-                .collect(Collectors.toList());
+    private ImmutableList<ValidationException> testPropertyDependencies(final JSONObject subject) {
+        return FluentIterable.from(propertyDependencies.keySet())
+                .filter(new Predicate<String>() {
+                    @Override
+                    public boolean apply(String input) {
+                        return subject.has(input);
+                    }
+                })
+                .transformAndConcat(new Function<String, Set<String>>() {
+                    @Override
+                    public Set<String> apply(String input) {
+                        return propertyDependencies.get(input);
+                    }
+                })
+                .filter(new Predicate<String>() {
+                    @Override
+                    public boolean apply(String mustBePresent) {
+                        return !subject.has(mustBePresent);
+                    }
+                })
+                .transform(new Function<String, ValidationException>() {
+                    @Override
+                    public ValidationException apply(String missingKey) {
+                        return new ValidationException(ObjectSchema.this,
+                                String.format("property [%s] is required", missingKey), "dependencies");
+                    }
+                })
+                .toList();
     }
 
     private List<ValidationException> testRequiredProperties(final JSONObject subject) {
-        return requiredProperties.stream()
-                .filter(key -> !subject.has(key))
-                .map(missingKey -> String.format("required key [%s] not found", missingKey))
-                .map(excMessage -> new ValidationException(this, excMessage, "required"))
-                .collect(Collectors.toList());
+        return FluentIterable.from(requiredProperties)
+                .filter(new Predicate<String>() {
+                    @Override
+                    public boolean apply(String key) {
+                        return !subject.has(key);
+                    }
+                })
+                .transform(new Function<String, ValidationException>() {
+                    @Override
+                    public ValidationException apply(String missingKey) {
+                        return new ValidationException(ObjectSchema.this,
+                                String.format("required key [%s] not found", missingKey), "required");
+                    }
+                })
+                .toList();
     }
 
     private List<ValidationException> testSchemaDependencies(final JSONObject subject) {
@@ -340,7 +399,7 @@ public class ObjectSchema extends Schema {
         for (Map.Entry<String, Schema> schemaDep : schemaDependencies.entrySet()) {
             String propName = schemaDep.getKey();
             if (subject.has(propName)) {
-                ifFails(schemaDep.getValue(), subject).ifPresent(rval::add);
+                rval.addAll(ifFails(schemaDep.getValue(), subject).asSet());
             }
         }
         return rval;
@@ -412,20 +471,37 @@ public class ObjectSchema extends Schema {
     }
 
     private boolean definesPatternProperty(final String current, final String remaining) {
-        return patternProperties.keySet()
-                .stream()
-                .filter(pattern -> pattern.matcher(current).matches())
-                .map(pattern -> patternProperties.get(pattern))
-                .filter(schema -> remaining == null || schema.definesProperty(remaining))
-                .findAny()
+        return FluentIterable.from(patternProperties.keySet())
+                .filter(new Predicate<Pattern>() {
+                    @Override
+                    public boolean apply(Pattern pattern) {
+                        return pattern.matcher(current).matches();
+                    }
+                })
+                .transform(new Function<Pattern, Schema>() {
+                    @Override
+                    public Schema apply(Pattern pattern) {
+                        return patternProperties.get(pattern);
+                    }
+                })
+                .firstMatch(new Predicate<Schema>() {
+                    @Override
+                    public boolean apply(Schema schema) {
+                        return remaining == null || schema.definesProperty(remaining);
+                    }
+                })
                 .isPresent();
     }
 
     private boolean definesSchemaDependencyProperty(final String field) {
         return schemaDependencies.containsKey(field)
-                || schemaDependencies.values().stream()
-                .filter(schema -> schema.definesProperty(field))
-                .findAny()
+                || FluentIterable.from(schemaDependencies.values())
+                .firstMatch(new Predicate<Schema>() {
+                    @Override
+                    public boolean apply(Schema schema) {
+                        return schema.definesProperty(field);
+                    }
+                })
                 .isPresent();
     }
 
@@ -435,8 +511,9 @@ public class ObjectSchema extends Schema {
 
     @Override
     public boolean equals(Object o) {
-        if (this == o)
+        if (this == o) {
             return true;
+        }
         if (o instanceof ObjectSchema) {
             ObjectSchema that = (ObjectSchema) o;
             return that.canEqual(this) &&
@@ -458,7 +535,8 @@ public class ObjectSchema extends Schema {
 
     @Override
     public int hashCode() {
-        return Objects.hash(super.hashCode(), propertySchemas, additionalProperties, schemaOfAdditionalProperties, requiredProperties,
+        return Objects.hash(super.hashCode(), propertySchemas, additionalProperties, schemaOfAdditionalProperties,
+                requiredProperties,
                 minProperties, maxProperties, propertyDependencies, schemaDependencies, requiresObject, patternProperties);
     }
 
@@ -497,12 +575,14 @@ public class ObjectSchema extends Schema {
     private void describePropertyDependenciesTo(JSONPrinter writer) {
         writer.key("dependencies");
         writer.object();
-        propertyDependencies.entrySet().forEach(entry -> {
+        for (Entry<String, Set<String>> entry : propertyDependencies.entrySet()) {
             writer.key(entry.getKey());
             writer.array();
-            entry.getValue().forEach(writer::value);
+            for (String value : entry.getValue()) {
+                writer.value(value);
+            }
             writer.endArray();
-        });
+        }
         writer.endObject();
     }
 
